# conformal-prediction

./: README.md  myst.yml  pyproject.toml
data/: car_prices_clean.parquet  df_study_L18_w6_test.parquet
src/: index.md  utils.py
src/classification/: 0-eda.ipynb  1-scp.ipynb  2-aps.ipynb
src/regression/: 0-eda.ipynb  1-scp.ipynb  2-cqr.ipynb  3-cv+.ipynb  utils.py
src/survival/: 0-introduction.ipynb  1-eda.ipynb  1-implementation.ipynb  2-cox.ipynb  2-cox.py  3-random-survival-forest.ipynb  4-gboost-survival.ipynb  5-survival-svm.ipynb  6-xgboost-aft.ipynb  7-results.ipynb  8-conformal-prediction.ipynb  RAPPORT_TECHNIQUE.md  README.md  SLIDES.md  utils.py
