[project]
name = "conformal-prediction"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub[polars-datasets]>=0.3.13",
    "lifelines>=0.30.0",
    "mapie>=1.1.0",
    "matplotlib>=3.10.7",
    "mystmd>=1.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pycox>=0.3.0",
    "scikit-learn>=1.6.2",
    "scikit-survival>=0.26.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "xgboost>=3.1.3",
]
