[project]
name = "conformal-prediction"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub[polars-datasets]>=0.3.13",
    "lifelines>=0.30.0",
    "mapie>=1.1.0",
    "matplotlib>=3.10.7",
    "mystmd>=1.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pycox>=0.3.0",
    "scikit-learn>=1.6.2",
    "scikit-survival>=0.26.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "xgboost>=3.1.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (Handled by the formatter)
    "C408",    # unnecessary-collection-call 
    "D213",    # multi-line-summary-second-line
    "D203",    # blank-line-before-class
    "C420",    # unnecessary-dict-comprehension-for-iterable
    "PLR2004", # magic-value-comparison
    "T201",    # print-statement
    "D202",    # blank-line-before-function
    "N816",    # mixed-case-variable-in-global-scope
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "ERA001",  # commented-out-code
    "S113",    # requests call without timeout
    "D401",    # docstring should be in imperative mood
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
