[project]
name = "conformal-prediction"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub[polars-datasets]>=0.3.13",
    "lifelines>=0.30.0",
    "mapie>=1.1.0",
    "matplotlib>=3.10.7",
    "mystmd>=1.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pycox>=0.3.0",
    "scikit-learn>=1.6.2",
    "scikit-survival>=0.26.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = ["jupytext>=1.19.1", "ruff>=0.15.0"]

[tool.jupytext]
notebook_metadata_filter = "jupytext,kernelspec"
cell_metadata_filter = "-all"

# [tool.jupytext.formats]
# "notebooks/" = "ipynb"
# "src/" = "py:percent"
# # "src/[0-9]*.py" = "py:percent" # Ne synchronise que les fichiers commençant par un chiffre

[tool.ruff]
fix = true

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.pycodestyle]
max-line-length = 320

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN204",  # missing class init return type
    "COM812",  # missing-trailing-comma, is already handled by ruff formatting
    "C408",    # unnecessary-collection-call 
    "C420",    # unnecessary-dict-comprehension
    "D1",      # docstring-missing 
    "D202",    # blank-line-before-function
    "D203",    # blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D401",    # docstring should be in imperative mood
    "E402",    # module level import not at top of file
    "ERA001",  # Allow commented out code 
    "N803",    # Allow non-lowercase argument names (e.g., fit(X, y))
    "N806",    # Allow non-lowercase variables in functions (e.g., Matrix X)
    "N816",    # mixed-case-variable-in-global-scope
    "PLR2004", # magic-value-comparison
    "T201",    # print-statement
    "S113",    # requests call without timeout
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RET504",  # return-statement
    "SIM108",  # ternary operator should be used 
    "INP001",  # implicit-namespace-package
    "PGH003",  # blanket-type-ignore
]
